# tiny_stories_sae

./: Dockerfile  LICENSE  README.md  docker_name  download.py  example.py  finetune.py  gather_high_activations.py  gather_high_activations_llm.py  infer.py  install_rye.bash  install_rye_if_missing.bash  jupyter.sh  lib.py  print_dataset.py  pyproject.toml  requirements.txt  run.sh  run_tb.sh  run_with_gpus.sh  run_with_jupyter.sh  test.py  train_sae.py  upload_to_hub.py
.github/workflows/: mdbook.yaml
docs/: book.toml
docs/src/: SUMMARY.md  automatic_feature_examination.md  introduction.md  making_it_sparse.md  manual_feature_examination.md  steering.md  training_a_sparse_autoencoder.md  training_an_autoencoder.md
src/tiny_stories_sae/: call_openai.py  combined_plot.py  gather_high_activations.py  gather_high_activations_llm.py  lib.py  nudge.py  plot.py  steer.py  train_sae.py
src/tiny_stories_sae/common/: activation_analysis.py  angle.py  obtain_activations.py  sae.py  setting_up.py
tests/: test_dot.py  test_features.py  test_imports.py  test_layer.py
