[project]
name = "tiny_stories_sae"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "beartype==0.18.5",
    "jaxtyping==0.2.33",
    "tensorboard==2.17.1",
    "coolname==2.2.0",
    "pytest==8.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code"]
