[project]
name = "tiny_stories_sae"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "beartype==0.18.5",
    "jaxtyping==0.2.33",
    "tensorboard==2.17.1",
    "coolname==2.2.0",
    "pytest==8.3.2",
    "accelerate==0.33.0",
    "datasets==2.20.0",
    "huggingface-hub==0.24.5",
    "notebook==7.0.6",
    "torch==2.4.0",
    "transformers==4.43.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_stories_sae"]
